CSES/err.txt
In file included from /usr/include/c++/10.2.0/bits/stl_algobase.h:71,
                 from /usr/include/c++/10.2.0/bits/char_traits.h:39,
                 from /usr/include/c++/10.2.0/ios:40,
                 from /usr/include/c++/10.2.0/istream:38,
                 from /usr/include/c++/10.2.0/sstream:38,
                 from /usr/include/c++/10.2.0/complex:45,
                 from /usr/include/c++/10.2.0/ccomplex:39,
                 from /usr/include/c++/10.2.0/x86_64-pc-linux-gnu/bits/stdc++.h:54,
                 from 1642.cpp:1:
/usr/include/c++/10.2.0/bits/predefined_ops.h: In instantiation of ‘bool __gnu_cxx::__ops::_Iter_comp_val<_Compare>::operator()(_Iterator, _Value&) [with _Iterator = std::pair<long long int, int>*; _Value = const long long int; _Compare = std::greater<std::pair<long long int, int> >]’:
/usr/include/c++/10.2.0/bits/stl_algobase.h:1324:14:   required from ‘_ForwardIterator std::__lower_bound(_ForwardIterator, _ForwardIterator, const _Tp&, _Compare) [with _ForwardIterator = std::pair<long long int, int>*; _Tp = long long int; _Compare = __gnu_cxx::__ops::_Iter_comp_val<std::greater<std::pair<long long int, int> > >]’
/usr/include/c++/10.2.0/bits/stl_algo.h:2041:32:   required from ‘_FIter std::lower_bound(_FIter, _FIter, const _Tp&, _Compare) [with _FIter = std::pair<long long int, int>*; _Tp = long long int; _Compare = std::greater<std::pair<long long int, int> >]’
1642.cpp:49:59:   required from here
/usr/include/c++/10.2.0/bits/predefined_ops.h:194:23: error: no match for call to ‘(std::greater<std::pair<long long int, int> >) (std::pair<long long int, int>&, const long long int&)’
  194 |  { return bool(_M_comp(*__it, __val)); }
      |                ~~~~~~~^~~~~~~~~~~~~~
In file included from /usr/include/c++/10.2.0/string:48,
                 from /usr/include/c++/10.2.0/bits/locale_classes.h:40,
                 from /usr/include/c++/10.2.0/bits/ios_base.h:41,
                 from /usr/include/c++/10.2.0/ios:42,
                 from /usr/include/c++/10.2.0/istream:38,
                 from /usr/include/c++/10.2.0/sstream:38,
                 from /usr/include/c++/10.2.0/complex:45,
                 from /usr/include/c++/10.2.0/ccomplex:39,
                 from /usr/include/c++/10.2.0/x86_64-pc-linux-gnu/bits/stdc++.h:54,
                 from 1642.cpp:1:
/usr/include/c++/10.2.0/bits/stl_function.h:375:7: note: candidate: ‘constexpr bool std::greater<_Tp>::operator()(const _Tp&, const _Tp&) const [with _Tp = std::pair<long long int, int>]’
  375 |       operator()(const _Tp& __x, const _Tp& __y) const
      |       ^~~~~~~~
/usr/include/c++/10.2.0/bits/stl_function.h:375:45: note:   no known conversion for argument 2 from ‘const long long int’ to ‘const std::pair<long long int, int>&’
  375 |       operator()(const _Tp& __x, const _Tp& __y) const
      |                                  ~~~~~~~~~~~^~~
